[tool.poetry]
name = "fastapi-walk"
version = "0.0.1"
description = "Desempolvando mi conocimiento en FastAPI"
authors = ["joseluistello <jltello96@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_walk"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
